--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule "server"]
 	path = server
-	url = /home/panos/tmp/tinyerp/openobject-server/.git
+	url = http://members.hellug.gr/xrg/repos/openobject-server
 [submodule "client"]
 	path = client
-	url = /home/panos/tmp/tinyerp/openobject-client/.git
+	url = http://members.hellug.gr/xrg/repos/openobject-client
 [submodule "client-kde"]
 	path = client-kde
-	url = /home/panos/tmp/tinyerp/openobject-client-kde/.git
+	url = http://members.hellug.gr/xrg/repos/openobject-client-kde
 [submodule "addons"]
 	path = addons
-	url = /home/panos/tmp/tinyerp/openobject-addons/.git
+	url = http://members.hellug.gr/xrg/repos/openobject-addons
 [submodule "bi"]
 	path = bi
-	url = /home/panos/tmp/tinyerp/openobject-bi/.git
+	url = http://members.hellug.gr/xrg/repos/openobject-bi
 [submodule "client-web"]
 	path = client-web
-	url = /home/panos/tmp/tinyerp/openobject-client-web/
+	url = http://members.hellug.gr/xrg/repos/openobject-client-web
