Add extra-addons as an submodule.
But, be careful, extra-addons can be fetched from the same "addons"
sources.

--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "doc"]
 	path = doc
 	url = http://members.hellug.gr/xrg/repos/openobject-doc
+[submodule "extra-addons"]
+	path = extra-addons
+	url = http://members.hellug.gr/xrg/repos/openobject-addons
