--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "extra-addons"]
 	path = extra-addons
 	url = http://members.hellug.gr/xrg/repos/openobject-addons
+[submodule "buildbot"]
+	path = buildbot
+	url = /home/panos/buildbot
