Updated all, getting into F3 mode
Submodule addons:
       132	P. Christeas <xrg@linux.gr>
        80	Launchpad Translations on behalf of openerp <>
        31	Najlaâ <nel@tinyerp.com>
        20	Rifakat (OpenERP) <rha@tinyerp.com>
        17	ado <ado@tinyerp.com>
        15	P. Christeas <p_christ@hol.gr>
        14	Xavier ALT <xal@openerp.com>
        12	olt@tinyerp.com <>
         6	skh <skh@tinyerp.com>
         6	tfr@openerp.com <>
         4	Jean-Christophe VASSORT <jcv@openerp.com>
         4	pso (OpenERP) <pso@tinyerp.com>
         3	ksa (OpenERP) <ksa@tinyerp.com>
         2	Atul Patel (OpenERP) <atp@tinyerp.com>
         2	Jean-Christophe VASSORT <>
         2	Stephane Wirtel <stw@openerp.com>
         2	Sébastien BEAU - http://www.akretion.com <>
         2	nep-OpenERP <nep@tinyerp.com>
         1	 <JoëlGrand-Guillaume@CampToCamp>
         1	Alexis de Lattre <alexis@via.ecp.fr>
         1	Ila Rana <ira@tinyerp.com>
         1	Jean-Christophe <>
         1	Leonardo Pistone - Agile BG - Domsense <>
         1	Olivier Dony <odo@openerp.com>
         1	Sébastien LANGE <sebastien.lange@syleam.fr>
         1	Vincent Renaville@camptocamp <>
         1	Xavier Fernandez http://www.smile.fr <>
         1	Yannick Vaucher @ Camptocamp <>
         1	hbto [Vauxoo] http://www.vauxoo.com <>
         1	jrial@safehex.be <>
         1	qdp (OpenERP) <>
Submodule apidoc:
         3	P. Christeas <xrg@linux.gr>
Submodule buildbot:
         7	P. Christeas <xrg@linux.gr>
Submodule client:
        21	P. Christeas <xrg@linux.gr>
        12	Launchpad Translations on behalf of openerp <>
         9	Naresh (OpenERP) <nch@tinyerp.com>
         5	olt@tinyerp.com <>
         3	Olivier Laurent <olt@tinyerp.com>
         3	rga <rga@rga-desktop>
         2	moylop260 <moylop260@hotmail.com>
         1	Lorenzo Battistini <>
         1	Naresh(OpenERP) <>
         1	Serpent Consulting Services <support@serpentcs.com>
         1	ado <ado@tinyerp.com>
         1	skh <skh@tinyerp.com>
Submodule cli

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,4 +33,4 @@
 	url = http://members.hellug.gr/xrg/repos/openobject-addons-koo
 [submodule "apidoc"]
 	path = apidoc
-	url = /home/panos/tmp/pics/apidoc/
+	url = http://members.hellug.gr/xrg/repos/openobject-apidoc
