--- a/mandriva/openerp-server.service
+++ b/mandriva/openerp-server.service
@@ -9,7 +9,7 @@ User=openerp
 OOMScoreAdjust=200
 RestartSec=10
 TimeoutStartSec=5min
-ExecStartPre=/etc/openerp/server-check.sh
+ExecStartPre=/etc/openerp/server-check.sh -s
 ExecStart=/usr/bin/openerp-server -c /etc/openerp-server.conf
 
 [Install]
